--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "typescript": "^4.6.4",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@types/three": "^0.144.0",
+    "gh-pages": "^4.0.0",
     "three": "^0.145.0"
   }
 }
