--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/three": "^0.144.0",
     "gh-pages": "^4.0.0",
+    "lil-gui": "^0.17.0",
     "three": "^0.145.0"
   }
 }
